js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-else-braceless-import-source-empty-str-is-valid-assign-expr.js
if
(
false
)
{
}
else
import
.
source
(
'
<
module
source
>
'
)
;
reportCompare
(
0
0
)
;
