js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-else-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
if
(
false
)
{
}
else
{
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
